--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^4.5.2",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "path-to-regexp": "^6.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1"
   },
